--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -16,7 +16,7 @@ html {
     width: 100%;
     padding: 4% 6%;
     color: white;
-    z-index: 0;
+    z-index: 10;
     transition: .4s ease-out;
     font-size: 1.3rem;
 }
@@ -51,7 +51,7 @@ html {
     position: relative;
     padding: 26px 10px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 10;
     display: none;
 }
 
